--- a/login-screen-react-native/package.json
+++ b/login-screen-react-native/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
-    "firebase": "^9.14.0",
+    "firebase": "^9.6.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
