--- a/login-screen-react-native/package.json
+++ b/login-screen-react-native/package.json
@@ -13,11 +13,13 @@
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.4.0",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.4",
     "@react-navigation/stack": "^6.3.8",
     "expo": "^47.0.8",
+    "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.14.0",
     "react": "18.1.0",
